[package]
name = "bmpcbzoi"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking","bevy_asset",] }

bevy_mod_picking = { version = "0.17.0", features = ["backend_sprite",]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
